--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
           <div class="blogging">
             <img
-              src="https://www.npmjs.com/npm-avatar/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdmF0YXJVUkwiOiJodHRwczovL3MuZ3JhdmF0YXIuY29tL2F2YXRhci80ODk2NWRhMmM3NTM5MGU4YzQ4NjA1OGMyODJiMzVjZD9zaXplPTQ5NiZkZWZhdWx0PXJldHJvIn0.5-IlWMa-FxH7_SnsVyZ4gSRtjwkOZDqYl1zODpKQwxM"
+              src="https://www.gstatic.com/devrel-devsite/prod/vf0a37f79faad17a4ba7ad32be120d7095e49b17f56e183e15bf9d3819216d0c9/firebase/images/touchicon-180.png"
               id="blog-img"
               alt=""
             />
