--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <ul id="home">
           <li id="nav-home"><a href="#scrl-blg">Home</a></li>
         </ul>
+        
+        <ul id="doc">
+          <li id="nav-home"><a href="#scrl-blg">cusTom JS</a></li>
+        </ul>
 
         <ul id="menu">
           <li id="nav-menu"><a href="about.html">About Me</a></li>
