--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       <div class="contact">
         <div class="inner-text">
-          <p>Copyright &copy; 2022 - www.liviocyber.io - All rights reserved</p>
+          <p>Copyright &copy; 2022 - kipter.github.io/LivioCyber/ - All rights reserved</p>
         </div>
       </div>
     </div>
