--- a/cusTom.html
+++ b/cusTom.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="./cusTom.js"></script>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body{
+            width: 100%;
+            height: 100vh;
+        }
+        .codepar{
+            width: 100%;
+            height: 100%;
+            overflow-y: scroll;
+            background: #222;
+            color: white;
+            line-height: 28px;
+            font-family: sans-serif;
+            padding: 10px;
+        }
+        .banner{
+            width: 300px;
+            height: 30px;
+            line-height: 30px;
+            background: #e7e7e4;
+            color: black;
+            text-align: center;
+            border-radius: 20px;
+            margin-top: 20px;
+        }
+        .coderepo{
+            width: 350px;
+            height: auto;
+            padding: 8px;
+            background: #111;
+            margin-top: 10px;
+        }
+        .code button{
+            width: 90px;
+            height: 25px;
+            background: #e7e7e4;
+            color:#222;
+            border: none;
+            outline: none;
+            border-radius: 20px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div class="codepar">
+        <h1>Documentation</h1>
+        <div class="code">
+            <div class="banner">
+                For Alert();
+            </div>
+            <div class="coderepo">
+                //Alert's A should must be in capital
+                <br>
+                <br>
+                Alert(your_header, your_text, button_text, background-color, color);
+                <br>
+                <br>
+                //Example
+                <br>
+                <br>
+                Alert("Alert", "This is an Alert", "#fff", "#000");
+                <br>
+                <br>
+                <button onclick="Alert()">Sample</button>
+            </div>
 
+            <div class="coderepo">
+                //Prompt's P should must be in capital
+                <br>
+                <br>
+                Prompt(your_text, FalseBtn_text, TrueBtn_text, background-color, color, input_Color).then(text=>{
+                    Alert(text)
+                })
+                <br>
+                <br>
+                //Example
+                <br>
+                <br>
+                Prompt("What is your name?", "CANCEL", "OK", "#fff", "#000", "#000").then(text=>{
+                    Alert("From LivioCyber",text)
+                })
+                <br>
+                <br>
+                <button onclick='Prompt("What is your name?", "CANCEL", "OK", "#fff", "#000", "#000").then(text=>{
+                    Alert("From LivioCyber", text);
+                })'>Sample</button>
+            </div>
+
+            <div class="coderepo">
+                //Confirm's C should must be in capital
+                <br>
+                <br>
+                Confirm(your_text, FalseBtn_text, TrueBtn_text, background-color, color).then(ac=>{
+                    console.log("You clicked on true button");
+                    //for false button its not gonna work!
+                  })
+                <br>
+                <br>
+                //Example
+                <br>
+                <br>
+                Confirm("Are You Sure", "Nope", "Yuppp!", "#fff", "#000").then(ac=>{
+                    Alert("From LivioCyber", "You clicked on true button");
+                    //for false button it's not gonna work!
+                })
+                <br>
+                <br>
+                <button onclick='Confirm("Are You Sure", "Nope", "Yuppp!", "#fff", "#000").then(ac=>{
+                    Alert("From LivioCyber", "You clicked on true button");
+                })'>Sample</button>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
