--- a/cusTom.html
+++ b/cusTom.html
@@ -77,7 +77,9 @@
                 <br>
                 <button onclick="Alert()">Sample</button>
             </div>
-
+            <div class="banner">
+                For Prompt();
+            </div>
             <div class="coderepo">
                 //Prompt's P should must be in capital
                 <br>
@@ -99,7 +101,9 @@
                     Alert("From LivioCyber", text);
                 })'>Sample</button>
             </div>
-
+            <div class="banner">
+                For Confirm();
+            </div>
             <div class="coderepo">
                 //Confirm's C should must be in capital
                 <br>
@@ -125,5 +129,13 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <p>
+        CDN:<p>
+        Copy From Here:
+        https://kipter.github.io/LivioCyber/cusTom.js
+    </p>
+    </p>
 </body>
 </html>
