--- a/cusTom.html
+++ b/cusTom.html
@@ -128,14 +128,11 @@
                 })'>Sample</button>
             </div>
         </div>
-    </div>
-    <br>
+        <br>
     <br>
     <p>
-        CDN:<p>
-        Copy From Here:
-        https://kipter.github.io/LivioCyber/cusTom.js
+    CDN: https://kipter.github.io/LivioCyber/cusTom.js    
     </p>
-    </p>
+    </div>
 </body>
 </html>
