--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/firstfirebaseproject-a95b0.appspot.com/o/menu.png?alt=media&token=d562b355-62eb-4d6b-8ca4-7c69bae8d227"
+        src="./menu.png"
         id="menu-logo"
       />
       <div class="nav-bar">
